# Procedural-Neuron-OpenGL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json  vercel.json
artifacts/: Engineering_Journal.md
src/: 2D_topology.cpp  CellularMorphology.cpp  CellularMorphology.h  NeuralNetworkManager.cpp  NeuralNetworkManager.h  Neuron.cpp  Neuron.h  RenderableShape.cpp  RenderableShape.h  main.cpp
web-ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
web-ui/src/: App.jsx  WasmProvider.jsx  index.css
web-ui/src/components/: BrowserGate.jsx  SelectedNeuronPanel.jsx  TourController.jsx
